k8s/authservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice-deployment
  labels:
    app: authservice
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - auth-db
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: authservice
          image: gitlab.lnu.se:5050/2dv013/student/team-5-burmese/2dv013-cloud-native-assignment-3-authservice/authservice:latest # CHANGE
          imagePullPolicy: Always
          ports:
            - containerPort: 12000
      imagePullSecrets:
        - name: regcred # Secret set as a secret in the cluster
---
apiVersion: v1
kind: Service
metadata:
  name: authservice-service
  labels:
    app: authservice
spec:
  selector:
    app: authservice
  ports:
    - protocol: TCP
      port: 12000
      targetPort: 12000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-svc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth/api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: authservice-service
                port:
                  number: 12000
